--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,8 +85,8 @@ android {
 
             String ssid = STAGING_SERVICE_UUID
             versionNameSuffix "-debug-${getGitHash()}-${ssid.substring(ssid.length() - 5, ssid.length() - 1)}"
-            resValue "string", "app_name", "OpenTrace Debug"
-            applicationIdSuffix "stg"
+            resValue "string", "app_name", "AC Contact Tracing Debug"
+//            applicationIdSuffix "stg"
         }
 
         release {
@@ -100,7 +100,7 @@ android {
             minifyEnabled false
             multiDexEnabled false
             zipAlignEnabled true
-            resValue "string", "app_name", "OpenTrace"
+            resValue "string", "app_name", "AC Contact Tracing"
 
             lintOptions {
                 // Ignore lint errors for now
